# get-papers-list

./: README.md  output.csv  pyproject.toml
src/get_papers_list/: cli.py  fetch.py  filter.py  output.py
