[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetches PubMed papers and filters non-academic authors."
authors = ["Sonali <chavansonali@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
